log

Thu 14 Mar 2024 02:41:27 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before numeric constant
   13 |   int maxNum 0;
      |              ^
exercises.c:13:14: error: statement with no effect [-Werror=unused-value]
exercises.c:15:17: error: ‘maxNum’ undeclared (first use in this function)
   15 |     if(arr[i] > maxNum) maxNum = arr[i];
      |                 ^~~~~~
exercises.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:17: error: control reaches end of non-void function [-Werror=return-type]
   16 |   return maxNum;}
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
d6c5f51
Thu 14 Mar 2024 02:41:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before numeric constant
   13 |   int maxNum 0;
      |              ^
exercises.c:13:14: error: statement with no effect [-Werror=unused-value]
exercises.c:15:17: error: ‘maxNum’ undeclared (first use in this function)
   15 |     if(arr[i] > maxNum) maxNum = arr[i];
      |                 ^~~~~~
exercises.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:17: error: control reaches end of non-void function [-Werror=return-type]
   16 |   return maxNum;}
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
a245a93
